# BraTS-2023-Metrics

./: README.md  eval.py  pyproject.toml  requirements.txt
brats_2023_metrics/: main.py
brats_2023_metrics/surface_distance/: brats_metrics.py  lookup_tables.py  metrics.py
