[tool.poetry]
name = "brats_2023_metrics"
version = "0.1.0"
description = "BraTS 2023 Lesion-Wise Performance Metrics for Segmentation Challenges"
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
connected-components-3d = "3.12.1"
nibabel = "5.1.0"
numpy = "1.24.3"
pandas = "1.3.4"
scipy = "1.11.4"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"